[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Background/Esileht/Nupp_heli_hover.png" type="Texture" id=1]
[ext_resource path="res://assets/Background/Esileht/Nupp_heli_lilla.png" type="Texture" id=2]
[ext_resource path="res://assets/Background/Esileht/Nupp_heli_stop_lilla.png" type="Texture" id=3]
[ext_resource path="res://assets/Background/Esileht/Nupp_heli_stop_hover.png" type="Texture" id=4]
[ext_resource path="res://src/SoundBtn.gd" type="Script" id=5]

[node name="SoundBtn" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundOFF" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 64.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 12
size_flags_stretch_ratio = 4.03
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundON" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 64.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 12
size_flags_stretch_ratio = 4.03
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="button_up" from="SoundOFF" to="." method="_on_SoundOFF_button_up"]
[connection signal="button_up" from="SoundON" to="." method="_on_SoundON_button_up"]
